# llec

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/: FUNDING.yml
.github/workflows/: cmake.yml
include/llec/: llec.hpp
include/llec/container/: fixed_object_pool.hpp  fixed_string.hpp  fixed_vector.hpp  fused_vector.hpp  index_preservation_array.hpp  small_unordered_map.hpp  small_unordered_set.hpp  static_string.hpp  static_unordered_set.hpp  static_vector.hpp
include/llec/core/: core.hpp  fancy_print.hpp  memory.hpp  time_capture.hpp  typed_handle.hpp
include/llec/math/: fast_math.hpp
include/llec/private/: aligned_storage.hpp  basic_iterator.hpp
include/llec/utility/: checksum.hpp  function_traits.hpp  overload_pattern.hpp  pair.hpp  stack_function.hpp  typeinfo.hpp
tests/: checksum_tests.cc  fixedobjectpool_tests.cc  fixedstring_tests.cc  fixedvector_tests.cc  fusedvector_tests.cc  indexpreservationarray_tests.cc  smallunorderedmap_tests.cc  smallunorderedset_tests.cc  stackfunction_tests.cc  staticstring_tests.cc  staticunorderedset_tests.cc  staticvector_tests.cc  typedhandle_tests.cc  typeinfo_tests.cc
